k8s/manifests/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: url
  labels:
    app: url
spec:
  ports:
  - port: 8000
    targetPort: 80
    protocol: TCP
  selector:
    app: url
  type: NodePort



# apiVersion: v1
# kind: Service
# metadata:
#   name: go-web-app
# spec:
#   type: NodePort
#   selector:
#     app: go-web-app
#   ports:
#     - port: 80
#       targetPort: 8000
#       nodePort: 30000
